Fix email display on narrower screens

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -135,7 +135,7 @@ table.check-your-answers th {
   }
   .column-three-quarter {
     float: left;
-    width: auto;
+    width: 75%;
   }
 }
 #banner {
